; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-msg.c_rwm_create.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-msg.c_rwm_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw_message = type { i32 }

@rwm_total_msgs = common dso_local global i32 0, align 4
@RM_INIT_MAGIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rwm_create(%struct.raw_message* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.raw_message*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.raw_message* %0, %struct.raw_message** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @rwm_total_msgs, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @rwm_total_msgs, align 4
  %9 = load %struct.raw_message*, %struct.raw_message** %4, align 8
  %10 = call i32 @memset(%struct.raw_message* %9, i32 0, i32 4)
  %11 = load i32, i32* @RM_INIT_MAGIC, align 4
  %12 = load %struct.raw_message*, %struct.raw_message** %4, align 8
  %13 = getelementptr inbounds %struct.raw_message, %struct.raw_message* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.raw_message*, %struct.raw_message** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @rwm_push_data(%struct.raw_message* %14, i8* %15, i32 %16)
  ret i32 %17
}

declare dso_local i32 @memset(%struct.raw_message*, i32, i32) #1

declare dso_local i32 @rwm_push_data(%struct.raw_message*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
